--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@ body{
 	padding-top: 4%;
 	padding-right: 10%;
 	padding-left: 12%;
-	padding-bottom: 8%
+	padding-bottom: 8%;
 }
 
 
@@ -36,9 +36,7 @@ body{
 	 text-align: center;
 	 text-shadow: 0 0 20px white, 0 0 40px white;
 	 padding: 5%;
-	 border-radius: 15px;
-	 
-	 
+	 border-radius: 15px;	 
 	}
 	
 h1{
@@ -122,6 +120,13 @@ h2{top: 20%;
 		padding-top: 1%;
 		background-color: rgba(255, 255, 255,0.3);
 		}
+	.head-con{
+	 background-color: rgba(255,255,255,0.8);
+	 text-align: center;
+	 text-shadow: 0 0 20px white, 0 0 40px white;
+	 padding: 1%;
+	 border-radius: 15px;	 
+	}
 	
 	h1{
 		background-color: rgba(255,255,255,0.0);
